Fix overflow on desktop

--- a/content/themes/rollekino/sass/layout/_search-modal.scss
+++ b/content/themes/rollekino/sass/layout/_search-modal.scss
@@ -14,7 +14,8 @@
   }
 
   > .container {
-    overflow: auto;
+    overflow-x: hidden;
+    overflow-y: auto;
   }
 
   .container {
